added pagination to find all anime from lists exceeding 300 + added extra error handling